--- a/Frontend/src/styles/findorwant.css
+++ b/Frontend/src/styles/findorwant.css
@@ -46,6 +46,18 @@ body{
 /* Control the left side */
 .left {
   left: 0;
+  position: absolute;
+  width: 300px;
+  height: 400px;
+  overflow: hidden;
+  overflow: 0px 0px 15px -5px;
+  transition: 0.3s;
+  animation: ease-in;
+  margin-top: 200px;
+  margin-left: 200px;
+  text-align: center;
+  border: solid;
+  border-radius: 1rem;
 }
 
 /* .left:hover {
@@ -55,6 +67,18 @@ body{
 /* Control the right side */
 .right {
   right: 0;
+  position: absolute;
+  width: 300px;
+  height: 400px;
+  overflow: hidden;
+  overflow: 0px 0px 15px -5px;
+  transition: 0.3s;
+  animation: ease-in;
+  margin-top: 200px;
+  margin-right: 200px;
+  text-align: center;
+  border: solid;
+  border-radius: 1rem;
 
 }
 
@@ -85,4 +109,34 @@ body{
 .centered img {
   width: 150px;
   border-radius: 50%;
+}
+
+/* .left{
+  position: absolute;
+  width: 300px;
+  overflow: hidden;
+  overflow: 0px 0px 15px -5px;
+  transition: 0.3s;
+  animation: ease-in;
+  margin-top: 200px;
+  margin-left: 200px;
+  text-align: center;
+  
+} */
+
+
+
+.card-container:hover{
+  transform: scale(1.1);
+  box-shadow: 0px 0px 15px 0px;
+}
+
+.image-container img{
+  overflow: hidden;
+  height: 200px;
+}
+
+.card-content{
+  margin: 1rem;
+  margin-top: 0.5rem;
 }
